# zkdpos

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  package.json
src/lib/atp_signer/: Cargo.toml
src/lib/atp_signer/src/: error.rs  json_rpc_signer.rs  lib.rs  pk_signer.rs  raw_alaya_tx.rs
src/lib/basic_types/: Cargo.toml
src/lib/basic_types/src/: lib.rs
src/lib/circuit/: Cargo.toml
src/lib/circuit/src/: account.rs  allocated_structures.rs  circuit.rs  element.rs  exit_circuit.rs  operation.rs  serialization.rs  signature.rs  utils.rs
src/lib/circuit/src/playground/: mod.rs  plonk_playground.rs
src/lib/circuit/src/witness/: add_liquidity.rs  change_pubkey_offchain.rs  close_account.rs  deposit.rs  exchange.rs  forced_exit.rs  full_exit.rs  mod.rs  noop.rs  remove_liquidity.rs  transfer.rs  transfer_to_new.rs  utils.rs  withdraw.rs
src/lib/config/src/configs/: atp_watch.rs
src/lib/crypto/: Cargo.toml  README.md
src/lib/crypto/src/: lib.rs  params.rs  primitives.rs  proof.rs  serialization.rs
src/lib/crypto/src/circuit/: account.rs  utils.rs
src/lib/crypto/src/merkle_tree/: mod.rs  rescue_hasher.rs
src/lib/state/: Cargo.toml
src/lib/state/src/: state.rs
src/lib/state/src/handler/: add_liquidity.rs  change_pubkey.rs  close.rs  deposit.rs  exchange.rs  forced_exit.rs  full_exit.rs  mod.rs  remove_liquidity.rs  transfer.rs  withdraw.rs
src/lib/state/src/tests/: collect_fee.rs  mod.rs
src/lib/state/src/tests/operations/: change_pub_key.rs  close.rs  forced_exit.rs  priority_ops.rs  transfer.rs  withdraw.rs
src/lib/types/: Cargo.toml  README.md
src/lib/types/src/: aggregated_operations.rs  alaya.rs  block.rs  fee.rs  gas_counter.rs  helpers.rs  lib.rs  mempool.rs  network.rs  prover.rs  tokens.rs  utils.rs
src/lib/types/src/account/: account_update.rs  mod.rs  pubkey_hash.rs
src/lib/types/src/operations/: add_liquidity_op.rs  change_pubkey_op.rs  close_op.rs  deposit_op.rs  exchange_op.rs  forced_exit.rs  full_exit_op.rs  mod.rs  noop_op.rs  remove_liquidity_op.rs  transfer_op.rs  transfer_to_new_op.rs  withdraw_op.rs
src/lib/types/src/priority_ops/: mod.rs
src/lib/types/src/tx/: add_liquidity.rs  change_pubkey.rs  close.rs  exchange.rs  forced_exit.rs  mod.rs  remove_liquidity.rs  tests.rs  transfer.rs  withdraw.rs  zkdpos_tx.rs
src/lib/types/src/tx/primitives/: atp_batch_sign_data.rs  atp_batch_signature.rs  atp_signature.rs  eip1271_signature.rs  mod.rs  packed_atp_signature.rs  packed_public_key.rs  packed_signature.rs  signature.rs  tests.rs  time_range.rs  tx_hash.rs
src/lib/utils/: Cargo.toml
src/lib/utils/src/: lib.rs
src/lib/vlog/: Cargo.toml
src/tests/test_account/: Cargo.toml
src/tests/test_account/src/: lib.rs
