[package]
name = "zkdpos_basic_types"
version = "1.0.0"
edition = "2018"
authors = ["The QinGah Team <wallet@qingah.com>"]
homepage = "https://dev.qingah.com/"
repository = "https://github.com/qingah/zkdpos"
license = "MIT"
keywords = ["blockchain", "zkdpos"]
categories = ["cryptography"]

[dependencies]
web3 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
