[package]
name = "zkdpos_circuit"
version = "0.0.1"
edition = "2018"
authors = ["The QinGah <wallet@qingah.com>"]
homepage = "https://dev.qingah.io/"
repository = "https://github.com/qingah/zkdpos"
license = "MIT"
keywords = ["blockchain", "zkdpos"]
categories = ["cryptography"]

[features]
default = []
playground = []

[dependencies]
zkdpos_state = { path = "../state", version = "1.0" }
zkdpos_types = { path = "../types", version = "1.0" }
zkdpos_crypto = { path = "../crypto", version = "1.0" }
zkdpos_atp_signer = { path = "../atp_signer", version = "1.0" }
rust-crypto = "0.2"
num = { version = "0.3.1", features = ["serde"] }
serde = "1.0.90"
anyhow = "1.0"
vlog = { path = "../../lib/vlog", version = "1.0" }

[dev-dependencies]
zkdpos_test_account = { path = "../../tests/test_account", version = "1.0" }
bigdecimal = { version = "0.2.0", features = ["serde"]}
rayon = "1.3.0"
criterion = "0.3.0"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"
