[package]
name = "zkdpos_state"
version = "1.0.0"
edition = "2018"
authors = ["The QinGah Team <wallet@qingah.com>"]
homepage = "https://dev.qingah.com/"
repository = "https://github.com/qingah/zkdpos"
license = "MIT"
keywords = ["blockchain", "zkdpos"]
categories = ["cryptography"]

[dependencies]
zkdpos_crypto = { path = "../crypto", version = "1.0" }
zkdpos_utils = { path = "../utils", version = "1.0" }
zkdpos_types = { path = "../types", version = "1.0" }

num = { version = "0.3.1", features = ["serde"] }
vlog = { path = "../../lib/vlog", version = "1.0" }
anyhow = "1.0"
metrics = "=0.14.2"
serde_json = "1.0"


[dev-dependencies]
criterion = "0.3.0"
web3 = "0.13.0"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"
