[package]
name = "zkdpos_utils"
version = "1.0.0"
edition = "2018"
authors = ["The QinGah Team <wallet@qingah.com>"]
homepage = "https://dev.qingah.qingah/"
repository = "https://github.com/qingah/zkdpos"
license = "MIT"
keywords = ["blockchain", "zkdpos"]
categories = ["cryptography"]

[dependencies]
num = { version = "0.3.1", features = ["serde"] }
bigdecimal = { version = "0.2.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0.0"
