[package]
name = "zkdpos_test_account"
version = "1.0.0"
edition = "2018"
authors = ["The QinGah Team <wallet@qingah.com>"]
homepage = "https://dev.qingah.com/"
repository = "https://github.com/qingah/zkdpos"
license = "MIT"
keywords = ["blockchain", "zkdpos"]
categories = ["cryptography"]
# This Crate must be published, as it's a dev-dependency of some our library crates.

[dependencies]
zkdpos_types = { path = "../../lib/types", version = "1.0" }
zkdpos_crypto = { path = "../../lib/crypto", version = "1.0" }
zkdpos_basic_types = { path = "../../lib/basic_types", version = "1.0" }

num = { version = "0.3.1", features = ["serde"] }
